crates/mun_codegen/src/snapshots/test__compare_op_u64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn equals(a: u64, b: u64) -> bool { a == b }\npub fn not_equal(a: u64, b: u64) -> bool { a != b}\npub fn less(a: u64, b: u64) -> bool { a < b }\npub fn less_equal(a: u64, b: u64) -> bool { a <= b }\npub fn greater(a: u64, b: u64) -> bool { a > b }\npub fn greater_equal(a: u64, b: u64) -> bool { a >= b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo.1 = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [2 x %struct.MunTypeInfo.1 addrspace(4)*]

define i1 @equals(i64 %0, i64 %1) {
body:
  %eq = icmp eq i64 %0, %1
  ret i1 %eq
}

define i1 @not_equal(i64 %0, i64 %1) {
body:
  %neq = icmp ne i64 %0, %1
  ret i1 %neq
}

define i1 @less(i64 %0, i64 %1) {
body:
  %less = icmp ult i64 %0, %1
  ret i1 %less
}

define i1 @less_equal(i64 %0, i64 %1) {
body:
  %lesseq = icmp ule i64 %0, %1
  ret i1 %lesseq
}

define i1 @greater(i64 %0, i64 %1) {
body:
  %greater = icmp ugt i64 %0, %1
  ret i1 %greater
}

define i1 @greater_equal(i64 %0, i64 %1) {
body:
  %greatereq = icmp uge i64 %0, %1
  ret i1 %greatereq
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::bool>::name" = private unnamed_addr constant [11 x i8] c"core::bool\00"
@"type_info::<core::bool>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"x\82\81m t7\03\CB\F8k\81-;\C9\84", [11 x i8]* @"type_info::<core::bool>::name", i32 1, i8 1, i8 0 }
@"type_info::<core::u64>::name" = private unnamed_addr constant [10 x i8] c"core::u64\00"
@"type_info::<core::u64>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\A6\E7g \D1\8B\1Aq`\1F\1E\07\BB5@q", [10 x i8]* @"type_info::<core::u64>::name", i32 64, i8 8, i8 0 }
@global_type_table = global [2 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::bool>", %struct.MunTypeInfo addrspace(4)* @"type_info::<core::u64>"]

